tests/invalid/TwoClasses.java
class Alpha {
    int a;
}

class Beta {
    int b;
}
